# toolcraft

./: .bumpversion.cfg  .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pyup.yml  404.html  AUTHORS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  GUIDE.md  HISTORY.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  tasks.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  coverage.yml  dev.yml  main.yml  pre-commit.yml  release.yml  test.yml  website.yml
api/: index.html
authors/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
examples/: cprofile.cmd  try.py  try_dapr_client.py  try_dapr_server.py  try_dapr_server_runner.py  try_gcsfs.py  try_gui.py  try_hookup.py  try_job.py  try_logger.py  try_parallel.py  try_richy.py  try_rule_checker.py  try_storage.py  try_tracker.py
examples/dapr/: run.py  run_runner.py  try_dapr_client.py  try_dapr_server.py  try_dapr_server_runner.py
examples/dpg/: delete_item.py
examples/richy/: dynamic_progress.py  layout.py  live_progress.py
guides/: pypackage.md  website.md
history/: index.html
installation/: index.html
overrides/partials/: comments.html
scripts/: __init__.py  parse_notebooks.py  parse_sphinx.py  terminal.cmd  validate_sphinx.py
search/: search_index.json
tests/: __init__.py  test_toolcraft.py  toolcraft_test.py
toolcraft/: __init__.py  __init__.py,cover  cli.py  helper.py  job.py  logger.py  logger_.py  marshalling.py  ml.py  parallel.py  richy.py  rules.py  settings.py  signal.py  toolcraft.py  toolcraft.py,cover  util.py
toolcraft/_bulk_code_refactor/: _script.py  custom_exception_classes.py
toolcraft/_some_tools/: sftp.py  stupid.py
toolcraft/dapr/: __base__.py  __init__.py  actor.py  binding.py  config.py  helper.py  invoke.py  pubsub.py  secret.py  state.py  track.py
toolcraft/df/: __init__.py
toolcraft/error/: __base__.py  __init__.py  _script.py  code.py  io.py  validation.py
toolcraft/fs/: __init__.py
toolcraft/gui/: __base__.py  __init__.py  _auto.py  _demo.py  _enum.py  callback.py  dashboard.py  demo.py  form.py  helper.py  plot.py  registry.py  table.py  util.py  widget.py  window.py
toolcraft/gui/_scripts/: dpg_generator.py  simple_data_flow.py
toolcraft/gui/_widget/: __init__.py  auto.py  core.py
toolcraft/gui/animate/: __init__.py
toolcraft/gui/asset/: __init__.py  themes.py
toolcraft/gui/assets/: __init__.py  themes.py
toolcraft/gui/scripts/: dpg_plot_widget_method_generator.py  dpg_widgets_generator.py  out.py  simple_data_flow.py
toolcraft/gui/widget/: __init__.py  auto.py  core.py
toolcraft/job/: __base__.py  __init__.py  cli.py  cli_launch.py
toolcraft/scripts/: pip_detect_redundant_packages.py  pip_package_mover.py
toolcraft/server/: __init__.py
toolcraft/storage/: __base__.py  __init__.py  _file_system.py  dec.py  file_group.py  file_system.py  file_system_dirfs.py  folder.py  fs.py  state.py  store.py  stream.py  table.py
toolcraft/texipy/: __base__.py  __init__.py  base.py  beamer.py  helper.py  pgfplots.py  posters.py  powerdot.py  readme.md  symbol.py  table.py  tikz.py  tikz_cd.py  usepackage.sty
toolcraft/texipy/examples/: common.py  symbols.py  try.py  try_beamer.py  try_document.py  try_table.py  try_tikz.py  try_tikz_beamer.py  try_tikz_tutorials.py  try_tutorials.py  zotero.bib
toolcraft/tools/: __base__.py  __init__.py  config.py  dapr.py  password.py  pypackage.py  refactor.py  sftp.py  storage.py
toolcraft/tools/disk_recovery/: ntfs_recovery.py  readme.md  run.cmd
toolcraft/tools/scripts/: pip_detect_redundant_packages.py
toolcraft/workflow/: readme.md
usage/: index.html
website/: docusaurus.config.js  package-lock.json  package.json
website/blog/: 2019-05-28-first-blog-post.md
website/src/pages/: index.js
